# rustql

./: .env  Cargo.toml  diesel.toml  docker-compose.yaml  graphql.http  schema.graphqls
migrations/2022-10-11-220434_create_users/: down.sql  up.sql
src/: db.rs  diesel_schema.rs  mailer.rs  main.rs  schema.rs
