[package]
name = "rustql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.18.3"
actix-cors = "0.6"

async-stream = "*"

juniper = "*"
juniper_actix = "*"
juniper_graphql_ws = "*"

env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

r2d2 = "0.8.10"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
