[package]
name = "rustql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.18.3"
actix-cors = "0.6"

futures = "0.3"
async-stream = "*"

juniper = { git = 'https://github.com/graphql-rust/juniper', package = "juniper", rev = "e0ddeecf" }
juniper_actix = { git = 'https://github.com/graphql-rust/juniper', package = "juniper_actix", rev = "e0ddeecf", features = ["subscriptions"] }
juniper_graphql_ws = { git = 'https://github.com/graphql-rust/juniper', package = "juniper_graphql_ws", rev = "e0ddeecf" }

env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

r2d2 = "0.8.10"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
tokio = "1.0"

chrono = { version = "0.4.19", default-features = false, features = ["clock", "std"] }
clap = { version = "4.0.17", features = ["derive"] }

